[package]
name = "ghai"
version = "0.5.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "ghai provides an intelligent shine to the gh command"
license = "Apache-2.0"

[dependencies]
claudius = "0.14.0"
chrono = "0.4"
getopts = "0.2"
policyai = "0.2.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.41"
urlencoding = "2.1"

arrrg = "0.6"
arrrg_derive = "0.6"
yammer = "0.9"
libc = "0.2.168"
